# stream-calculator

./: .env.sample  .pnpmfile.cjs  AGENTS.md  CLAUDE.md  README.md  biome.json  nodemon.json  package.yaml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: copilot-instructions.md
@adapter/buffer/: package.json
@adapter/fft/: package.json
@adapter/fft-band-value/: package.json
@adapter/output-remote/: package.json
@adapter/output-web/: package.json
@adapter/realtime-publish/: package.json
@adapter/resampler/: package.json
@adapter/sensor-noise/: package.json
@adapter/sensor-remote/: package.json
@adapter/sensor-sine/: package.json
@adapter/time-align/: package.json
@shared/testing/python-testing-environment/: pyproject.toml
@shared/testing/python-testing-environment/my_adapter/common/: __init__.py
@shared/testing/python-testing-environment/my_adapter/protocol/: connection.py
@shared/testing/python-testing-environment/my_adapter/protocol/base/: encoder.py  packet.py
@shared/testing/python-testing-environment/my_adapter/protocol/helpers/: dtype.py  timestamp.py
@shared/testing/python-testing-environment/my_adapter/protocol/payloads/: __init__.py  frame.py  keep_alive.py
@shared/testing/python-testing-environment/my_programs/fft/spectrum/: server.py  spectrum.py  test.py
@shared/testing/python-testing-environment/my_programs/wave_merger/: data_collect.py  server.py
@shared/testing/python-testing-environment/my_programs/wave_merger/method/: add.py
docs/: architecture.drawio
scripts/: delete-all-build-output.sh  start.devel.js  start.js
(+180 files in other folders)
