[tool.poetry]
name = "my_adapter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.17.1"
numpy = "^2.4.3"


[tool.poetry.group.dev.dependencies]
snakeviz = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
